--- a/cheet_sheet.ipynb
+++ b/cheet_sheet.ipynb
@@ -11,9 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "id": "ynNs7jlJ3nPA"
+    "id": "ynNs7jlJ3nPA",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -31,9 +32,7 @@
     "from sklearn.metrics import mean_squared_error as MSE\n",
     "from sklearn.linear_model import LinearRegression as LR\n",
     "from sklearn.ensemble import RandomForestRegressor as RF\n",
-    "import lightgbm as lgb\n",
-    "\n",
-    "df = pd.read_csv('train.csv')"
+    "import lightgbm as lgb\n"
    ]
   },
   {
@@ -90,26 +89,6 @@
    },
    "source": [
     "統計量出力"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_eweQgMh4BCL"
-   },
-   "outputs": [],
-   "source": [
-    "#データの概要を見る時\n",
-    "df.info()\n",
-    "#数値型のデータの統計量出力\n",
-    "df.describe()\n",
-    "#カテゴリデータの統計量出力\n",
-    "df.describe(include=\"O\")\n",
-    "#カテゴリ変数の種類と一覧表示\n",
-    "df[\"カラム名\"].value_counts()\n",
-    "カテゴリ変数一覧= df['カラム名'].nunique()\n",
-    "カテゴリ変数が何種類あるか = df['カラム名'].unique()"
    ]
   },
   {
