--- a/signate_J_league/J_league.ipynb
+++ b/signate_J_league/J_league.ipynb
@@ -915,6 +915,10 @@
    "execution_count": 138,
    "id": "7f4c503d-5327-4ca4-8fa6-1ee72b4b4712",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2484,7 +2488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
